<resources>
    <string name="app_name">Assignment3-276</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">PUCK FINDER</string>
    <string name="main_menu_btn_str">Main Menu</string>
    <string name="title_activity_main_menu_screen">MainMenuScreen</string>
    <string name="start_game_string">Start Game</string>
    <string name="options">Options</string>
    <string name="find_all_of_the_pucks">Find all of the pucks</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_help">Help</string>


    <string name="resource_string">Images were found at the following sources:\n
        <a href="https://www.freepik.com/free-vector/ice-rink-night-empty-public-place-skating_6823050.htm">Dark Rink</a>,\n
        <a href="https://www.istockphoto.com/photos/purple-question-mark">Question Marks</a>,\n
        <a href="https://clipart.world/hockey-clipart/boy-hockey-player-clipart/">Hockey Player</a>,\n
        <a href="https://www.iconfinder.com/icons/1007170/award_championship_hockey_nhl_stanley_cup_trophy_winner_icon">Hockey Trophy</a>,\n
        <a href="https://www.wallsauce.com/ca/wall-murals-wallpaper/ice-hockey-wallpaper">Main Menu Dark Rink</a>"</string>
    <string name="resource_title_string">Image Resources</string>
    <string name="puck_game_explained_string">Click on areas to try to find Hockey Pucks.
        If you don\'t, you will get help from a scan that counts how many pucks are remaining
        in that row/column. Once a puck is found, you can press on it to reveal a scan for corresponding row/column.</string>
    <string name="puck_game_title_string_help">Puck Finder</string>
    <string name="about_author_string">This game is written by Matthew Hamilton and Alexei Tkachenko,
        second year students in \n
        <a href="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home">Dr. Fraser\'s CMPT 276</a></string>
    <string name="author_title">Author</string>
    <string name="title_activity_game_board">GameBoard</string>
    <string name="pucks">" Pucks"</string>
    <string name="you_won">You Won!</string>


</resources>